--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!--font-->
+    <!--    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap"
+      rel="stylesheet"-->
+    />
+    <!--CSS-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -27,20 +37,21 @@
         <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
       <section id="traditions-section">
-        <ul class="adventages-list">
-          <li>Великий попит на ринку</li>
-          <li>Доступні за бюджетом формати</li>
-          <li>Досвідчена управлінська команда</li>
+        <ul class="advantages-list">
+          <li class="advantages-item">Великий попит на ринку</li>
+          <li class="advantages-item">Доступні за бюджетом формати</li>
+          <li class="advantages-item">Досвідчена управлінська команда</li>
         </ul>
         <h2 class="section-title">Новий формат традицій</h2>
-        <p>
-          <span>shop bakery</span> - це пекарня, яка взяла все найкраще, і
-          зберегла смак традиційної випічки та натуральність інгрідієнтів.
+        <p class="traditions-text">
+          <span class="uppercase">shop bakery</span> - це пекарня, яка взяла все
+          найкраще, і зберегла смак традиційної випічки та натуральність
+          інгрідієнтів.
         </p>
-        <p>
+        <p class="traditions-text">
           Ми працюємо як найвідоміші мережі -
-          <span>5 хвилин і замовлення готово</span>. А ще у наших пекарень
-          стильний дизайн та висока якість обслуговування.
+          <span class="lowercase">5 хвилин і замовлення готово</span>. А ще у
+          наших пекарень стильний дизайн та висока якість обслуговування.
         </p>
         <img
           src="./images/baker-man.jpg"
@@ -54,7 +65,7 @@
         <ul>
           <l1>
             <article>
-              <h3>Настя</h3>
+              <h3 class="chef-title">Настя</h3>
               <p>Привіт, я Настя!</p>
               <p>Вже 10 років я втілюю в життя цікаві та смачні ідеї.</p>
               <p>Я випечу для вас найсмачніші вироби!</p>
@@ -62,7 +73,7 @@
           </l1>
           <l1>
             <article>
-              <h3>Влад</h3>
+              <h3 class="chef-title">Влад</h3>
               <p>Привіт, я Влад.</p>
               <p>
                 Мій кондитерський стаж вже 18 років. <span>shop bakery</span> -
@@ -79,23 +90,51 @@
         <ul>
           <li>
             <article>
-              <h3 lang="en">Warlus</h3>
+              <h3 class="format-title" lang="en">Warlus</h3>
+              <div class="format-text">
+                <p>Площа: до 120 м2</p>
+                <p>Меню: розширене меню</p>
+                <p>
+                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                  офіціанти різнороби
+                </p>
+                <p>Посадкові місця: є</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3 lang="en">Horseshoe</h3>
+              <h3 class="format-title" lang="en">Horseshoe</h3>
+              <div class="format-text">
+                <p>Площа: до 120 м2</p>
+                <p>Меню: розширене меню</p>
+                <p>
+                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                  офіціанти різнороби
+                </p>
+                <p>Посадкові місця: є</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3 lang="en">Handlebar</h3>
+              <h3 class="format-title" lang="en">Handlebar</h3>
+              <div class="format-text">
+                <p>Площа: до 120 м2</p>
+                <p>Меню: розширене меню</p>
+                <p>
+                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                  офіціанти різнороби
+                </p>
+                <p>Посадкові місця: є</p>
+              </div>
             </article>
           </li>
         </ul>
       </section>
       <section id="contacts-section">
         <h2 class="section-title">Приєднуйтесь до мережі пекарень</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1734196888473!5m2!1suk!2sua"
           width="603"
@@ -113,26 +152,32 @@
       </a>
       <nav>
         <ul>
-          <li><a href="#" target="_blank">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="link" href="#" target="_blank">Наші традиції</a></li>
+          <li><a class="link" href="#">Шеф-кухарі</a></li>
+          <li><a class="link" href="#">Формати</a></li>
+          <li><a class="link" href="#">Контакти</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="tel:+38(096)0000007" target="_blank"
+            <a class="address-link" href="tel:+38(096)0000007" target="_blank"
               >+ 38 (096) 000 00 07
             </a>
           </li>
           <li>
-            <a href="mailto:shopbakery@gmail.com" target="_blank"
+            <a
+              class="address-link"
+              href="mailto:shopbakery@gmail.com"
+              target="_blank"
               >shopbakery@gmail.com
             </a>
           </li>
           <li>
-            <a href="https://g.co/kgs/1wVh56M" target="_blank"
+            <a
+              class="address-link"
+              href="https://g.co/kgs/1wVh56M"
+              target="_blank"
               >Україна, м. Київ, вул. Січових Стрільців 54
             </a>
           </li>
@@ -147,8 +192,10 @@
             </a>
           </li>
         </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>&copy; 2023 Дані захищені</p>
+        <a class="address-link" href="#" target="_blank"
+          >Політика конфіденційності</a
+        >
+        <p class="address-copyright">&copy; 2023 Дані захищені</p>
       </address>
     </foter>
   </body>
