--- a/index.html
+++ b/index.html
@@ -27,170 +27,192 @@
       <button class="button" type="button">Замовити дзвінок</button>
     </heder>
     <main>
+      <section class="hero-section">
+        <div class="conteiner">
+          <h1 class="hero-title">
+            <span class="accent">Сучасна</span> пекарня
+          </h1>
+        </div>
+      </section>
       <section>
-        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+        <div class="conteiner">
+          <h2 class="visually-hidden">Наші переваги</h2>
+          <ul class="advantages-list">
+            <li class="advantages-item">Великий попит на ринку</li>
+            <li class="advantages-item">Доступні за бюджетом формати</li>
+            <li class="advantages-item">Досвідчена управлінська команда</li>
+          </ul>
+        </div>
       </section>
-      <section id="traditions-section">
-        <ul class="advantages-list">
-          <li class="advantages-item">Великий попит на ринку</li>
-          <li class="advantages-item">Доступні за бюджетом формати</li>
-          <li class="advantages-item">Досвідчена управлінська команда</li>
-        </ul>
-        <h2 class="section-title">Новий формат традицій</h2>
-        <p class="traditions-text">
-          <span class="uppercase">shop bakery</span> - це пекарня, яка взяла все
-          найкраще, і зберегла смак традиційної випічки та натуральність
-          інгрідієнтів.
-        </p>
-        <p class="traditions-text">
-          Ми працюємо як найвідоміші мережі -
-          <span class="lowercase">5 хвилин і замовлення готово</span>. А ще у
-          наших пекарень стильний дизайн та висока якість обслуговування.
-        </p>
-        <img
-          src="./images/baker-man.jpg"
-          alt="Чоловік пекар дивиться на батони із посмішкою"
-        />
+      <section class="traditions-section section" id="traditions-section">
+        <div class="conteiner">
+          <h2 class="traditions-title section-title">Новий формат традицій</h2>
+          <p class="traditions-text">
+            <span class="uppercase">shop bakery</span> - це пекарня, яка взяла
+            все найкраще, і зберегла смак традиційної випічки та натуральність
+            інгрідієнтів.
+          </p>
+          <p class="traditions-text">
+            Ми працюємо як найвідоміші мережі -
+            <span class="lowercase">5 хвилин і замовлення готово</span>. А ще у
+            наших пекарень стильний дизайн та висока якість обслуговування.
+          </p>
+          <img
+            src="./images/baker-man.jpg"
+            alt="Чоловік пекар дивиться на батони із посмішкою"
+          />
+        </div>
       </section>
-      <section id="chefs-section">
-        <h2 class="section-title">
-          Найкращі <span class="accent">шеф-кухарі</span>
-        </h2>
-        <ul>
-          <l1>
-            <article>
-              <h3 class="chef-title">Настя</h3>
-              <p>Привіт, я Настя!</p>
-              <p>Вже 10 років я втілюю в життя цікаві та смачні ідеї.</p>
-              <p>Я випечу для вас найсмачніші вироби!</p>
-            </article>
-          </l1>
-          <l1>
-            <article>
-              <h3 class="chef-title">Влад</h3>
-              <p>Привіт, я Влад.</p>
-              <p>
-                Мій кондитерський стаж вже 18 років. <span>shop bakery</span> -
-                це наша любов з якою ми ділимося кожен раз з Вами через нашу
-                випічку.
-              </p>
-              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-            </article>
-          </l1>
-        </ul>
-      </section>
-      <section id="formats-section">
-        <h2 class="section-title">Формати</h2>
-        <ul>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Warlus</h3>
-              <div class="format-text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
+      <section class="chefs-title section" id="chefs-section">
+        <div class="conteiner">
+          <h2 class="section-title">
+            Найкращі <span class="accent">шеф-кухарі</span>
+          </h2>
+          <ul>
+            <l1>
+              <article>
+                <h3 class="chef-title">Настя</h3>
+                <p>Привіт, я Настя!</p>
+                <p>Вже 10 років я втілюю в життя цікаві та смачні ідеї.</p>
+                <p>Я випечу для вас найсмачніші вироби!</p>
+              </article>
+            </l1>
+            <l1>
+              <article>
+                <h3 class="chef-title">Влад</h3>
+                <p>Привіт, я Влад.</p>
                 <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти різнороби
+                  Мій кондитерський стаж вже 18 років.
+                  <span>shop bakery</span> - це наша любов з якою ми ділимося
+                  кожен раз з Вами через нашу випічку.
                 </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Horseshoe</h3>
-              <div class="format-text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
-                <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти різнороби
-                </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="format-title" lang="en">Handlebar</h3>
-              <div class="format-text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
-                <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти різнороби
-                </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-        </ul>
+                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+              </article>
+            </l1>
+          </ul>
+        </div>
       </section>
-      <section id="contacts-section">
-        <h2 class="section-title">Приєднуйтесь до мережі пекарень</h2>
-        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1734196888473!5m2!1suk!2sua"
-          width="603"
-          height="595"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+      <section class="section" id="formats-section">
+        <div class="conteiner">
+          <h2 class="formats-title section-title">Формати</h2>
+          <ul>
+            <li>
+              <article>
+                <h3 class="format-title" lang="en">Warlus</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="format-title" lang="en">Horseshoe</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="format-title" lang="en">Handlebar</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section" id="contacts-section">
+        <div class="conteiner">
+          <h2 class="contacts-title section-title">
+            Приєднуйтесь до мережі пекарень
+          </h2>
+          <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1734196888473!5m2!1suk!2sua"
+            width="603"
+            height="595"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
       </section>
     </main>
     <foter>
-      <a href="./index.html">
-        <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
-        <!-- logo -->
-      </a>
-      <nav>
-        <ul>
-          <li><a class="link" href="#" target="_blank">Наші традиції</a></li>
-          <li><a class="link" href="#">Шеф-кухарі</a></li>
-          <li><a class="link" href="#">Формати</a></li>
-          <li><a class="link" href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="address-link" href="tel:+38(096)0000007" target="_blank"
-              >+ 38 (096) 000 00 07
-            </a>
-          </li>
-          <li>
-            <a
-              class="address-link"
-              href="mailto:shopbakery@gmail.com"
-              target="_blank"
-              >shopbakery@gmail.com
-            </a>
-          </li>
-          <li>
-            <a
-              class="address-link"
-              href="https://g.co/kgs/1wVh56M"
-              target="_blank"
-              >Україна, м. Київ, вул. Січових Стрільців 54
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- facebook -->
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- instagram -->
-            </a>
-          </li>
-        </ul>
-        <a class="address-link" href="#" target="_blank"
-          >Політика конфіденційності</a
-        >
-        <p class="address-copyright">&copy; 2023 Дані захищені</p>
-      </address>
+      <div class="conteiner">
+        <a href="./index.html">
+          <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
+          <!-- logo -->
+        </a>
+        <nav>
+          <ul>
+            <li><a class="link" href="#" target="_blank">Наші традиції</a></li>
+            <li><a class="link" href="#">Шеф-кухарі</a></li>
+            <li><a class="link" href="#">Формати</a></li>
+            <li><a class="link" href="#">Контакти</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul>
+            <li>
+              <a class="address-link" href="tel:+38(096)0000007" target="_blank"
+                >+ 38 (096) 000 00 07
+              </a>
+            </li>
+            <li>
+              <a
+                class="address-link"
+                href="mailto:shopbakery@gmail.com"
+                target="_blank"
+                >shopbakery@gmail.com
+              </a>
+            </li>
+            <li>
+              <a
+                class="address-link"
+                href="https://g.co/kgs/1wVh56M"
+                target="_blank"
+                >Україна, м. Київ, вул. Січових Стрільців 54
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- facebook -->
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- instagram -->
+              </a>
+            </li>
+          </ul>
+          <a class="address-link" href="#" target="_blank"
+            >Політика конфіденційності</a
+          >
+          <p class="address-copyright">&copy; 2023 Дані захищені</p>
+        </address>
+        class="conteiner"
+      </div>
     </foter>
   </body>
 </html>
