--- a/index.html
+++ b/index.html
@@ -11,31 +11,37 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <heder>
-      <nav>
-        <a href="./index.html">
-          <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
-          <!-- logo -->
-        </a>
-        <ul>
-          <li><a class="link" href="#traditions-section">Наші традиції</a></li>
-          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a class="link" href="#formats-section">Формати</a></li>
-          <li><a class="link" href="#contacts-section">Контакти</a></li>
-        </ul>
-      </nav>
-      <button class="button" type="button">Замовити дзвінок</button>
-    </heder>
+    <header class="header">
+      <div class="container">
+        <div class="header-container">
+          <nav class="header-nav">
+            <a href="./index.html">
+              <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
+              <!-- logo -->
+            </a>
+            <ul class="header-list">
+              <li>
+                <a class="link" href="#traditions-section">Наші традиції</a>
+              </li>
+              <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+              <li><a class="link" href="#formats-section">Формати</a></li>
+              <li><a class="link" href="#contacts-section">Контакти</a></li>
+            </ul>
+          </nav>
+          <button class="button" type="button">Замовити дзвінок</button>
+        </div>
+      </div>
+    </header>
     <main>
       <section class="hero-section">
-        <div class="conteiner">
+        <div class="container">
           <h1 class="hero-title">
             <span class="accent">Сучасна</span> пекарня
           </h1>
         </div>
       </section>
-      <section>
-        <div class="conteiner">
+      <section class="advantages-section">
+        <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages-list">
             <li class="advantages-item">Великий попит на ринку</li>
@@ -45,174 +51,237 @@
         </div>
       </section>
       <section class="traditions-section section" id="traditions-section">
-        <div class="conteiner">
-          <h2 class="traditions-title section-title">Новий формат традицій</h2>
-          <p class="traditions-text">
-            <span class="uppercase">shop bakery</span> - це пекарня, яка взяла
-            все найкраще, і зберегла смак традиційної випічки та натуральність
-            інгрідієнтів.
-          </p>
-          <p class="traditions-text">
-            Ми працюємо як найвідоміші мережі -
-            <span class="lowercase">5 хвилин і замовлення готово</span>. А ще у
-            наших пекарень стильний дизайн та висока якість обслуговування.
-          </p>
-          <img
-            src="./images/baker-man.jpg"
-            alt="Чоловік пекар дивиться на батони із посмішкою"
-          />
+        <div class="container">
+          <div class="traditions-container">
+            <div class="traditions-content">
+              <h2 class="traditions-title section-title">
+                Новий формат традицій
+              </h2>
+              <p class="traditions-text">
+                <span class="uppercase">shop bakery</span> - це пекарня, яка
+                взяла все найкраще, і зберегла смак традиційної випічки та
+                натуральність інгрідієнтів.
+              </p>
+              <p class="traditions-text limited">
+                Ми працюємо як найвідоміші мережі -
+                <span class="lowercase">5 хвилин і замовлення готово</span>. А
+                ще у наших пекарень стильний дизайн та висока якість
+                обслуговування.
+              </p>
+            </div>
+            <img
+              src="./images/baker-man.jpg"
+              alt="Чоловік пекар дивиться на батони із посмішкою"
+            />
+          </div>
         </div>
       </section>
-      <section class="chefs-title section" id="chefs-section">
-        <div class="conteiner">
-          <h2 class="section-title">
+      <section class="section" id="chefs-section">
+        <div class="container">
+          <h2 class="chefs-title section-title centered">
             Найкращі <span class="accent">шеф-кухарі</span>
           </h2>
-          <ul>
-            <l1>
-              <article>
-                <h3 class="chef-title">Настя</h3>
-                <p>Привіт, я Настя!</p>
-                <p>Вже 10 років я втілюю в життя цікаві та смачні ідеї.</p>
-                <p>Я випечу для вас найсмачніші вироби!</p>
+          <ul class="chefs-list">
+            <l1 class="chefs-item">
+              <article class="chef-card">
+                <img
+                  class="chef-photo"
+                  src="./images/nastya-chef.jpg"
+                  alt="nastya-chef"
+                />
+                <div>
+                  <h3 class="chef-title">Настя</h3>
+                  <div class="chef-text">
+                    <p>Привіт, я Настя!</p>
+                    <p>
+                      Вже 10 років я втілюю <br />
+                      в життя цікаві та смачні ідеї.
+                    </p>
+                    <p>
+                      Я випечу для вас <br />
+                      найсмачніші вироби!
+                    </p>
+                  </div>
+                </div>
               </article>
             </l1>
-            <l1>
-              <article>
-                <h3 class="chef-title">Влад</h3>
-                <p>Привіт, я Влад.</p>
-                <p>
-                  Мій кондитерський стаж вже 18 років.
-                  <span>shop bakery</span> - це наша любов з якою ми ділимося
-                  кожен раз з Вами через нашу випічку.
-                </p>
-                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+            <l1 class="chefs-item">
+              <article class="chef-card">
+                <img
+                  class="chef-photo"
+                  src="./images/vlad-chef.jpg"
+                  alt="vlad-chef"
+                />
+                <div>
+                  <h3 class="chef-title">Влад</h3>
+                  <div class="chef-text">
+                    <p>Привіт, я Влад.</p>
+                    <p>
+                      Мій кондитерський стаж вже 18 років.
+                      <span>shop bakery</span> - це наша любов з якою ми
+                      ділимося кожен раз з Вами через нашу випічку.
+                    </p>
+                    <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+                  </div>
+                </div>
               </article>
             </l1>
           </ul>
         </div>
       </section>
       <section class="section" id="formats-section">
-        <div class="conteiner">
-          <h2 class="formats-title section-title">Формати</h2>
-          <ul>
-            <li>
-              <article>
-                <h3 class="format-title" lang="en">Warlus</h3>
-                <div class="format-text">
-                  <p>Площа: до 120 м2</p>
-                  <p>Меню: розширене меню</p>
-                  <p>
-                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                    офіціанти різнороби
-                  </p>
-                  <p>Посадкові місця: є</p>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article>
-                <h3 class="format-title" lang="en">Horseshoe</h3>
-                <div class="format-text">
-                  <p>Площа: до 120 м2</p>
-                  <p>Меню: розширене меню</p>
-                  <p>
-                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                    офіціанти різнороби
-                  </p>
-                  <p>Посадкові місця: є</p>
-                </div>
-              </article>
-            </li>
-            <li>
-              <article>
-                <h3 class="format-title" lang="en">Handlebar</h3>
-                <div class="format-text">
-                  <p>Площа: до 120 м2</p>
-                  <p>Меню: розширене меню</p>
-                  <p>
-                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                    офіціанти різнороби
-                  </p>
-                  <p>Посадкові місця: є</p>
-                </div>
-              </article>
-            </li>
-          </ul>
+        <div class="container">
+          <h2 class="formats-title section-title centered">Формати</h2>
+          <div class="formats-container">
+            <button class="carousel-button" type="button">
+              <svg width="16" height="16">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
+            <ul class="formats-list">
+              <li class="format-item">
+                <article class="format-card">
+                  <h3 class="format-title" lang="en">Warlus</h3>
+                  <div class="format-text">
+                    <p>Площа: до 120 м2</p>
+                    <p>Меню: розширене меню</p>
+                    <p>
+                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                      офіціанти різнороби
+                    </p>
+                    <p>Посадкові місця: є</p>
+                  </div>
+                </article>
+              </li>
+              <li class="format-item">
+                <article class="format-card">
+                  <h3 class="format-title" lang="en">Horseshoe</h3>
+                  <div class="format-text">
+                    <p>Площа: до 120 м2</p>
+                    <p>Меню: розширене меню</p>
+                    <p>
+                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                      офіціанти різнороби
+                    </p>
+                    <p>Посадкові місця: є</p>
+                  </div>
+                </article>
+              </li>
+              <li class="format-item">
+                <article class="format-card">
+                  <h3 class="format-title" lang="en">Handlebar</h3>
+                  <div class="format-text">
+                    <p>Площа: до 120 м2</p>
+                    <p>Меню: розширене меню</p>
+                    <p>
+                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                      офіціанти різнороби
+                    </p>
+                    <p>Посадкові місця: є</p>
+                  </div>
+                </article>
+              </li>
+            </ul>
+            <button class="carousel-button" type="button">
+              <svg width="16" height="16">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
-      <section class="section" id="contacts-section">
-        <div class="conteiner">
-          <h2 class="contacts-title section-title">
-            Приєднуйтесь до мережі пекарень
-          </h2>
-          <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1734196888473!5m2!1suk!2sua"
-            width="603"
-            height="595"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+      <section class="contacts-section section" id="contacts-section">
+        <div class="container">
+          <div class="contact-container">
+            <div class="contact-form">
+              <h2 class="contacts-title section-title">
+                Приєднуйтесь до мережі пекарень
+              </h2>
+              <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+              <!-- Form -->
+            </div>
+            <iframe
+              class="contact-map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1734196888473!5m2!1suk!2sua"
+              width="603"
+              height="595"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
       </section>
     </main>
-    <foter>
-      <div class="conteiner">
-        <a href="./index.html">
-          <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
-          <!-- logo -->
-        </a>
-        <nav>
-          <ul>
-            <li><a class="link" href="#" target="_blank">Наші традиції</a></li>
-            <li><a class="link" href="#">Шеф-кухарі</a></li>
-            <li><a class="link" href="#">Формати</a></li>
-            <li><a class="link" href="#">Контакти</a></li>
-          </ul>
-        </nav>
-        <address>
-          <ul>
-            <li>
-              <a class="address-link" href="tel:+38(096)0000007" target="_blank"
-                >+ 38 (096) 000 00 07
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-container">
+          <nav class="footer-nav">
+            <div class="footer-logo">
+              <a href="./index.html">
+                <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
+                <!-- logo -->
               </a>
-            </li>
-            <li>
-              <a
-                class="address-link"
-                href="mailto:shopbakery@gmail.com"
-                target="_blank"
-                >shopbakery@gmail.com
+            </div>
+            <ul class="footer-menu">
+              <li>
+                <a class="link" href="#" target="_blank">Наші традиції</a>
+              </li>
+              <li><a class="link" href="#">Шеф-кухарі</a></li>
+              <li><a class="link" href="#">Формати</a></li>
+              <li><a class="link" href="#">Контакти</a></li>
+            </ul>
+          </nav>
+          <address class="footer-address">
+            <ul class="address-list">
+              <li>
+                <a
+                  class="address-link"
+                  href="tel:+38(096)0000007"
+                  target="_blank"
+                  >+ 38 (096) 000 00 07
+                </a>
+              </li>
+              <li>
+                <a
+                  class="address-link"
+                  href="mailto:shopbakery@gmail.com"
+                  target="_blank"
+                  >shopbakery@gmail.com
+                </a>
+              </li>
+              <li>
+                <a
+                  class="address-link"
+                  href="https://g.co/kgs/1wVh56M"
+                  target="_blank"
+                  >Україна, м. Київ, вул. Січових Стрільців 54
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="address-icon" whidth="32" height="32">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg class="address-icon" whidth="32" height="32">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <div class="address-info">
+              <a class="address-link" href="#" target="_blank">
+                Політика конфіденційності
               </a>
-            </li>
-            <li>
-              <a
-                class="address-link"
-                href="https://g.co/kgs/1wVh56M"
-                target="_blank"
-                >Україна, м. Київ, вул. Січових Стрільців 54
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <!-- facebook -->
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <!-- instagram -->
-              </a>
-            </li>
-          </ul>
-          <a class="address-link" href="#" target="_blank"
-            >Політика конфіденційності</a
-          >
-          <p class="address-copyright">&copy; 2023 Дані захищені</p>
-        </address>
-        class="conteiner"
+              <p class="address-copyright">&copy; 2023 Дані захищені</p>
+            </div>
+          </address>
+        </div>
       </div>
-    </foter>
+    </footer>
   </body>
 </html>
