Added settings to prettierrc styles

--- a/index.html
+++ b/index.html
@@ -276,7 +276,9 @@
                 </button>
                 <p class="form-terms">
                   Натискаючи на кнопку я погоджуюсь з
-                  <a class="form-terms__link" href="#">політикою конфіденційності</a>
+                  <a class="form-terms__link" href="#"
+                    >політикою конфіденційності</a
+                  >
                 </p>
               </form>
             </div>
@@ -365,7 +367,9 @@
     </footer>
     <div class="backdrop is-hidden">
       <div class="modal">
-        <button class="modal__btn-close modal-btn-close" type="button">Close</button>
+        <button class="modal__btn-close modal-btn-close" type="button">
+          Close
+        </button>
         <h2>Замовити дзвінок</h2>
         <p>Залишіть заявку та наш спеціаліст звʼяжиться з Вами!</p>
 
